--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -16,7 +16,7 @@ network = VisualizationA
 *.coordinateSystem.playgroundHeading = 68.3deg
 
 # VISUALIZER
-# scene visualizer
+# show the map
 *.visualizer.osgVisualizer.sceneVisualizerType = "SceneOsgEarthVisualizer"
 *.visualizer.osgVisualizer.sceneVisualizer.mapFile = "boston.earth"
 *.visualizer.osgVisualizer.sceneVisualizer.playgroundShading = false
@@ -25,14 +25,14 @@ network = VisualizationA
 *.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
 
 
-[Config Visualization02]	# Adding static 3D objects to the scene	# under construction
+[Config Visualization02]	# Adding static 3D objects to the scene	# under construction	# under construction
 extends = Visualization01
 description = Adding static 3D objects to the scene
 #########################
 
 
 [Config Visualization03]	# Displaying communiation/interference range
-extends = Visualization02		#TODO: if Visualization02 became active change Visualization01 to Visualization02
+extends = Visualization02
 description = Displaying communication & interference range
 network = VisualizationB
 
@@ -42,7 +42,7 @@ network = VisualizationB
 *.pedestrian*.wlan[*].radio.transmitter.power = 0.7mW
 
 # VISUALIZER
-# medium visualizer
+# display communication and interface ranges
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
 
@@ -54,8 +54,9 @@ description = Using 3D models for network nodes
 # PARAMETERS
 
 # VISUALIZER
-# osgModel visualizer
-*.pedestrian0.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot" # external 3D animated osg model, I stole from "inet/examples/visualization/networknode/" folder
+# change phone to a boxman
+# external 3D animated osg model, I take it from "inet/examples/visualization/networknode/" folder
+*.pedestrian0.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot" 
 *.pedestrian1.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
 
 
@@ -93,14 +94,14 @@ description = Displaying recent movement
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
 # accessPoint0 mobility
-*.accessPoint*.mobilityType = "StationaryMobility"		# default, can be omitted 
+*.accessPoint*.mobilityType = "StationaryMobility"		# default, can be omitted
 *.accessPoint*.mobility.coordinateSystemModule = "coordinateSystem"
 *.accessPoint0.mobility.initialLatitude = 42.3542933deg
 *.accessPoint0.mobility.initialLongitude = -71.0663985deg
 *.accessPoint*.mobility.initialAltitude = 0.5m
 
 # VISUALIZER
-# mobility visualizer
+# show movements
 *.visualizer.*.mobilityVisualizer.displayVelocity = true
 *.visualizer.*.mobilityVisualizer.displayMovementTrail = true
 
@@ -112,7 +113,7 @@ description = Showing IP addresses
 # PARAMETERS
 
 # VISUALIZER
-# interface table visualizer: it shows pedestrians' wlan ip addresses
+# show pedestrians' wlan ip addresses
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = "*.pedestrian*"
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
 
@@ -127,11 +128,11 @@ description = Showing wifi association
 # turn off interface table visualizer
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
 
-# ieee802.11 visualizer: it shows wifi association
+# show wifi association
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 
-[Config Visualization08a]	# Displaying transmissions & receptions
+[Config Visualization08]	# Displaying transmissions & receptions
 extends = Visualization07
 description = Displaying transmissions & receptions, association off
 
@@ -147,47 +148,17 @@ description = Displaying transmissions & receptions, association off
 *.pedestrian0.udpApp[0].destPort = 5000
 # can be changed or can be omitted
 *.pedestrian0.udpApp[0].startTime = 1s
-*.pedestrian0.udpApp[0].stopTime = 31s
 
 # voip receiver
 *.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
 *.pedestrian1.udpApp[0].localPort = 5000
+*.pedestrian1.udpApp[0].adaptivePlayoutDelay = true
 
 # VISUALIZER
-# turn off ieee802.11 visualizer???
-*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
+# turn off ieee802.11 visualizer?
+#*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
 
-# medium visualizer: it displays transmissions and receptions
-*.visualizer.*.mediumVisualizer.displayTransmissions = true
-*.visualizer.*.mediumVisualizer.displayReceptions = true
-*.visualizer.*.mediumVisualizer.transmissionImage = "transmission.png"
-*.visualizer.*.mediumVisualizer.receptionImage = "reception.png"
-
-
-[Config Visualization08b]	# Displaying transmissions & receptions
-extends = Visualization07
-description = Displaying transmissions & receptions, association on
-
-# PARAMETERS
-# voip application
-*.pedestrian*.numUdpApps = 1
-
-# voip sender
-*.pedestrian0.udpApp[0].typename = "SimpleVoIPSender"
-*.pedestrian0.udpApp[0].destAddress = "pedestrian1"
-*.pedestrian0.udpApp[0].localPort = 5000
-*.pedestrian0.udpApp[0].destPort = 5000
-
-# can be changed or can be omitted
-*.pedestrian0.udpApp[0].startTime = 1s
-*.pedestrian0.udpApp[0].stopTime = 31s
-
-# voip receiver
-*.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
-*.pedestrian1.udpApp[0].localPort = 5000
-
-# VISUALIZER
-# medium visualizer: it displays transmissions and receptions
+# display transmissions & receptions
 *.visualizer.*.mediumVisualizer.displayTransmissions = true
 *.visualizer.*.mediumVisualizer.displayReceptions = true
 *.visualizer.*.mediumVisualizer.transmissionImage = "transmission.png"
@@ -195,13 +166,13 @@ description = Displaying transmissions & receptions, association on
 
 
 [Config Visualization09]	# Showing propagating signals
-extends = Visualization08a
+extends = Visualization08
 description = Showing propagating signals
 
 # PARAMETERS
 
 # VISUALIZER
-# medium visualizer
+# show propagating signals
 *.visualizer.*.mediumVisualizer.displaySignals = true
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 50ns
 #*.visualizer.osgVisualizer.mediumVisualizer.signalShape = "ring"
@@ -216,7 +187,7 @@ description = Showing active physical links
 # PARAMETERS
 
 # VISUALIZER
-# turn on physical links
+# display physical links
 *.visualizer.*.physicalLinkVisualizer.packetNameFilter = "*"
 
 
@@ -230,22 +201,25 @@ description = Showing active data links
 # turn off physical links
 *.visualizer.*.physicalLinkVisualizer.packetNameFilter = ""
 
-# turn on VoIP data links
+# show VoIP data links
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
 
 
-[Config Visualization12]	# Displaying throughput statistic
+[Config Visualization12]	# Displaying playout delay statistic
 extends = Visualization11
 description = Displaying throughput statistics
 
 # PARAMETERS
 
 # VISUALIZER
-# statistic visualizer: Should change???
-*.visualizer.*.statisticVisualizer.signalName = "VoIPPacketLossRate"
-*.visualizer.*.statisticVisualizer.statisticName = "packetLossRate"
-*.visualizer.*.statisticVisualizer.prefix = "Packet loss"
-*.visualizer.*.statisticVisualizer.unit = "ratio"
+# turn off ieee802.11 visualizer?
+*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
+
+# display playout delay statistic
+*.visualizer.*.statisticVisualizer.signalName = "VoIPPlayoutDelay"
+*.visualizer.*.statisticVisualizer.statisticName = "playoutDelay"
+*.visualizer.*.statisticVisualizer.prefix = "Playout delay"
+*.visualizer.*.statisticVisualizer.unit = "s ms"
 *.visualizer.*.statisticVisualizer.sourcePathFilter = "**.udpApp[0]"
 
 
@@ -292,9 +266,13 @@ network = VisualizationC
 *.pedestrianVideo.udpApp[0].serverAddress = "videoStreamServer"
 *.pedestrianVideo.udpApp[0].serverPort = 4000
 # can be changed or can be omitted
-*.pedestrianVideo.udpApp[0].startTime = 15s
+*.pedestrianVideo.udpApp[0].startTime = 10s
 
 # VISUALIZER
+# turn off communication and interface ranges
+*.visualizer.*.mediumVisualizer.displayCommunicationRanges = false
+*.visualizer.*.mediumVisualizer.displayInterferenceRanges = false
+
 # change displaying VoIP data links to displaying Videostream data links
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "*Video*"
 
@@ -310,6 +288,10 @@ description = Displaying 802.11 channel access state
 # PARAMETERS
 
 # VISUALIZER
+# turn off transmissions & receptions
+*.visualizer.*.mediumVisualizer.displayTransmissions = false
+*.visualizer.*.mediumVisualizer.displayReceptions = false
+
 # turn off statistic visualizer
 *.visualizer.*.statisticVisualizer.signalName = ""
 *.visualizer.*.statisticVisualizer.statisticName = ""
@@ -319,12 +301,15 @@ description = Displaying 802.11 channel access state
 *.visualizer.*.infoVisualizer.content = "displayStringText"
 
 
-[Config Visualization15a]	# Showing active network routes		# under construction: I need network route visualizer
+[Config Visualization15]	# Showing active network routes
 extends = Visualization14
 description = Showing active network routes
 network = VisualizationD
 
 # PARAMETERS
+# configurate ipv4 addresses manually
+*.configurator.config = xmldoc("configurationD.xml")
+
 # accessPoint1
 *.accessPoint1.wlan[*].radio.transmitter.power = 1mW
 *.accessPoint1.mobility.initialLatitude = 42.35324deg
@@ -354,63 +339,32 @@ network = VisualizationD
 *.visualizer.*.routingTableVisualizer.subscriptionModule = ""
 *.visualizer.*.routingTableVisualizer.destinationFilter = ""
 
-# turn off ranges: too many devices on the playground
+# turn off ranges
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = false
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = false
 
-# Show the difference between dataLink and route?
-#*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
+# turn off channel access state
+*.visualizer.*.infoVisualizer.modules = ""
 
-# network route visualizer
-#*.visualizer.*.routeVisualizer.subscriptionModule = "**"
-#*.visualizer.*.routeVisualizer.packetNameFilter = "*VoIP*"
+# turn on ieee802.11 visualizer?
+*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
-
-[Config Visualization15b]	# Showing active network routes		# under construction: I need network route visualizer
-extends = Visualization14
-description = Showing active network routes
-network = VisualizationD
-
-# PARAMETERS
-# accessPoint1
-*.accessPoint1.wlan[*].radio.transmitter.power = 1mW
-*.accessPoint1.mobility.initialLatitude = 42.35324deg
-*.accessPoint1.mobility.initialLongitude = -71.06530deg
-
-# router1 mobility
-*.router1.mobility.initialLatitude = 42.35351deg
-*.router1.mobility.initialLongitude = -71.06486deg
-
-# pedestrian1 mobility: Changed because we placed a new access point
-*.pedestrian1.mobility.initialX = 630m
-*.pedestrian1.mobility.initialY = 90m
-*.pedestrian1.mobility.constraintAreaMinX = 625m
-*.pedestrian1.mobility.constraintAreaMinY = 85m
-*.pedestrian1.mobility.constraintAreaMaxX = 635m
-*.pedestrian1.mobility.constraintAreaMaxY = 230m
-
-# accessPoints & pedestrians wifi
-*.accessPoint0.wlan[0].mgmt.ssid = "inetwifi0"
-*.accessPoint1.wlan[0].mgmt.ssid = "inetwifi1"
-*.pedestrian0.wlan[0].agent.default_ssid = "inetwifi0"
-*.pedestrianVideo.wlan[0].agent.default_ssid = "inetwifi0"
-*.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
-
-# VISUALIZER
-# turn off routing table
-*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
-*.visualizer.*.routingTableVisualizer.destinationFilter = ""
+# show pedestrians' wlan ip addresses
+*.visualizer.*.interfaceTableVisualizer.nodeFilter = "*.pedestrian*"
+*.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
 
 # Show the difference between dataLink and route?
 #*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
+# turn off data links
+#*.visualizer.*.dataLinkVisualizer.packetNameFilter = ""
 
-# network route visualizer
-#*.visualizer.*.routeVisualizer.subscriptionModule = "**"
-#*.visualizer.*.routeVisualizer.packetNameFilter = "*VoIP*"
+# turn on network routes
+*.visualizer.*.networkRouteVisualizer.packetNameFilter = "*VoIP*"
+*.visualizer.*.networkRouteVisualizer.lineColor = "#FF0000"
 
 
 [Config Visualization16]	# Displaying physical environment
-extends = Visualization15b
+extends = Visualization15
 description = Displaying physical environment
 network = VisualizationE
 
@@ -427,7 +381,8 @@ network = VisualizationE
 
 # VISUALIZER
 
-[Config Visualization17]	# Displaying obstacle loss			# under construction: signal doesn't conflict obstacles
+
+[Config Visualization17]	# Displaying obstacle loss
 extends = Visualization16
 description = Displaying obstacle loss
 
@@ -458,9 +413,12 @@ description = Displaying transport connections
 network = VisualizationF
 
 # PARAMETERS
+# update ipv4 addresses
+*.configurator.config = xmldoc("configurationF.xml")
+
 # car appearance
 *.car[*].osgModel = "car.osgb.20.scale"
-*.car[*].osgModelColor = "#CB4154"
+*.car[*].osgModelColor = "#FF0000"
 
 # car wlan communication range parameter
 *.car[*].wlan[*].radio.transmitter.power = 0.7mW
