Dchp Example: validation

--- a/examples/dhcp/omnetpp.ini
+++ b/examples/dhcp/omnetpp.ini
@@ -1,5 +1,6 @@
 [General]
 tkenv-plugin-path = ../../../etc/plugins
+record-eventlog = true
 sim-time-limit = 100d
 
 [Config WiredDHCP]
@@ -40,6 +41,10 @@ network = WirelessNetWithDHCP
 **.client[*].numPingApps = 1
 **.client[*].pingApp[0].destAddr = "remote"
 **.client[*].pingApp[0].startTime = 3s
+#for validation
+**.client[*].wlan[*].mac.qosStation = false
+**.ap.wlan[*].mac.qosStation = false
+#for validation
 
 # DHCP server for the wireless network 
 **.dhcpServer.numUdpApps = 1
