--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -148,6 +148,7 @@ description = Displaying transmissions & receptions, association off
 *.pedestrian0.udpApp[0].destPort = 5000
 # can be changed or can be omitted
 *.pedestrian0.udpApp[0].startTime = 1s
+*.pedestrian0.udpApp[0].stopTime = 31s
 
 # voip receiver
 *.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
@@ -266,7 +267,7 @@ network = VisualizationC
 *.pedestrianVideo.udpApp[0].serverAddress = "videoStreamServer"
 *.pedestrianVideo.udpApp[0].serverPort = 4000
 # can be changed or can be omitted
-*.pedestrianVideo.udpApp[0].startTime = 10s
+*.pedestrianVideo.udpApp[0].startTime = 15s
 
 # VISUALIZER
 # turn off communication and interface ranges
@@ -295,6 +296,9 @@ description = Displaying 802.11 channel access state
 # turn off statistic visualizer
 *.visualizer.*.statisticVisualizer.signalName = ""
 *.visualizer.*.statisticVisualizer.statisticName = ""
+
+# turn on ieee802.11 visualizer?
+*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 # info visualizer parameters: shows channel access state
 *.visualizer.*.infoVisualizer.modules = "*.*.wlan[0].mac.ctn[0]"
@@ -327,12 +331,40 @@ network = VisualizationD
 *.pedestrian1.mobility.constraintAreaMaxX = 635m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
+# router0 dhcp
+*.router0.hasDHCP = true
+*.router0.dhcp.interface = "eth0"
+*.router0.dhcp.ipAddressStart = "192.168.0.11"
+*.router0.dhcp.subnetMask = "255.255.255.0"
+*.router0.dhcp.maxNumClients = 10
+*.router0.dhcp.gateway = "192.168.0.1"
+*.router0.dhcp.dns = "192.168.0.1"
+*.router0.dhcp.leaseTime = 3600s
+
+#router1 dhcp
+*.router1.hasDHCP = true
+*.router1.dhcp.interface = "eth0"
+*.router1.dhcp.ipAddressStart = "192.168.1.11"
+*.router1.dhcp.subnetMask = "255.255.255.0"
+*.router1.dhcp.maxNumClients = 10
+*.router1.dhcp.gateway = "192.168.1.1"
+*.router1.dhcp.dns = "192.168.1.1"
+*.router1.dhcp.leaseTime = 3600s
+
+# pedestrians dhcp
+*.pedestrian*.numUdpApps = 2
+*.pedestrian*.udpApp[1].typename = "DHCPClient"
+
 # accesspoint & pedestrians wifi
 *.accessPoint0.wlan[0].mgmt.ssid = "inetwifi0"
 *.accessPoint1.wlan[0].mgmt.ssid = "inetwifi1"
 *.pedestrian0.wlan[0].agent.default_ssid = "inetwifi0"
 *.pedestrianVideo.wlan[0].agent.default_ssid = "inetwifi0"
 *.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
+
+# modify VoIP start time because of the dhcp
+*.pedestrian0.udpApp[0].startTime = 10s
+*.pedestrian0.udpApp[0].stopTime = 40s
 
 # VISUALIZER
 # turn off routing table
@@ -433,12 +465,14 @@ network = VisualizationF
 *.car[*].mobility.speed = 12mps
 
 # car video stream settings
-*.car[*].numUdpApps = 1
+*.car[*].numUdpApps = 2
 *.car[*].udpApp[0].typename = "UDPVideoStreamCli"
 *.car[*].udpApp[0].localPort = 4000
 *.car[*].udpApp[0].serverAddress = "videoStreamServer"
 *.car[*].udpApp[0].serverPort = 4000
-*.car[*].wlan[*].agent.default_ssid = ""
+*.car[*].udpApp[0].startTime = 15s
+*.car[*].udpApp[1].typename = "DHCPClient"
+*.car[*].wlan[*].agent.default_ssid = "inetwifi2"
 
 # accessPoint2 mobility & wlan
 *.accessPoint2.mobility.initialLatitude = 42.35606deg
@@ -453,6 +487,26 @@ network = VisualizationF
 # router3 mobility
 *.router3.mobility.initialLatitude =  42.3558974deg
 *.router3.mobility.initialLongitude = -71.065796deg
+
+# router2 dhcp
+*.router2.hasDHCP = true
+*.router2.dhcp.interface = "eth0"
+*.router2.dhcp.ipAddressStart = "192.168.2.11"
+*.router2.dhcp.subnetMask = "255.255.255.0"
+*.router2.dhcp.maxNumClients = 10
+*.router2.dhcp.gateway = "192.168.2.1"
+*.router2.dhcp.dns = "192.168.2.1"
+*.router2.dhcp.leaseTime = 3600s
+
+# router3 dhcp
+*.router3.hasDHCP = true
+*.router3.dhcp.interface = "eth0"
+*.router3.dhcp.ipAddressStart = "192.168.3.11"
+*.router3.dhcp.subnetMask = "255.255.255.0"
+*.router3.dhcp.maxNumClients = 10
+*.router3.dhcp.gateway = "192.168.3.1"
+*.router3.dhcp.dns = "192.168.3.1"
+*.router3.dhcp.leaseTime = 3600s
 
 # accessPoint3 mobility & wlan
 *.accessPoint3.mobility.initialLatitude = 42.357007deg
@@ -486,10 +540,6 @@ network = VisualizationF
 # turn off showing channel access state
 *.visualizer.*.infoVisualizer.modules = ""
 
-# debugging: routing table visualizer: car[*] all routing table entries
-*.visualizer.*.routingTableVisualizer.subscriptionModule = "car[*]"
-*.visualizer.*.routingTableVisualizer.destinationFilter = "**"
-
 # shows wifi association
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
@@ -515,4 +565,10 @@ extends = Visualization20
 description = Visualizing handovers
 
 
+[Config Visualization22]
+extends = Visualization21
+description = Displaying changing routes
 
+# turn on network routes
+*.visualizer.*.networkRouteVisualizer.packetNameFilter = "*Video*"
+*.visualizer.*.networkRouteVisualizer.lineColor = "#FF0000"
