--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -87,6 +87,7 @@ extends = MacBase
 
 [Config MacQos]
 #for validation
+**.wlan[*].mac.qosStation = true
 **.mac.hcf.isBlockAckSupported = false
 #for validation
 extends = MacBase, Edca
