--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -79,9 +79,9 @@ description = Displaying recent movement
 
 # pedestrian0 mobility
 *.pedestrian0.mobility.initialX = 395m
-*.pedestrian0.mobility.initialY = 63m
-*.pedestrian0.mobility.constraintAreaMinX = 385m
-*.pedestrian0.mobility.constraintAreaMinY = 60m
+*.pedestrian0.mobility.initialY = 65m
+*.pedestrian0.mobility.constraintAreaMinX = 390m
+*.pedestrian0.mobility.constraintAreaMinY = 63m
 *.pedestrian0.mobility.constraintAreaMaxX = 400m
 *.pedestrian0.mobility.constraintAreaMaxY = 230m
 
@@ -125,7 +125,7 @@ description = Showing wifi association
 # PARAMETERS
 
 # VISUALIZER
-# turn off interface table visualizer
+# turn off ip addresses
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
 
 # show wifi association
@@ -134,26 +134,26 @@ description = Showing wifi association
 
 [Config Visualization08]	# Displaying transmissions & receptions
 extends = Visualization07
-description = Displaying transmissions & receptions, association off
+description = Displaying transmissions & receptions
 
 # PARAMETERS
 # voip application
-*.pedestrian0.numUdpApps = 1
-*.pedestrian1.numUdpApps = 1
+#*.pedestrian0.numUdpApps = 1
+#*.pedestrian1.numUdpApps = 1
 
-# voip sender
-*.pedestrian0.udpApp[0].typename = "SimpleVoIPSender"
-*.pedestrian0.udpApp[0].destAddress = "pedestrian1"
-*.pedestrian0.udpApp[0].localPort = 5000
-*.pedestrian0.udpApp[0].destPort = 5000
+# voip sender		# If check_and_cast error solved, uncomment this
+#*.pedestrian0.udpApp[0].typename = "SimpleVoIPSender"
+#*.pedestrian0.udpApp[0].destAddress = "pedestrian1"
+#*.pedestrian0.udpApp[0].localPort = 5000
+#*.pedestrian0.udpApp[0].destPort = 5000
 # can be changed or can be omitted
-*.pedestrian0.udpApp[0].startTime = 1s
-*.pedestrian0.udpApp[0].stopTime = 31s
+#*.pedestrian0.udpApp[0].startTime = 1s
+#*.pedestrian0.udpApp[0].stopTime = 31s
 
-# voip receiver
-*.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
-*.pedestrian1.udpApp[0].localPort = 5000
-*.pedestrian1.udpApp[0].adaptivePlayoutDelay = true
+# voip receiver		# If check_and_cast error solved, uncomment this
+#*.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
+#*.pedestrian1.udpApp[0].localPort = 5000
+#*.pedestrian1.udpApp[0].adaptivePlayoutDelay = true
 
 # VISUALIZER
 # turn off ieee802.11 visualizer?
@@ -208,7 +208,7 @@ description = Showing active data links
 
 [Config Visualization12]	# Displaying playout delay statistic
 extends = Visualization11
-description = Displaying throughput statistics
+description = Displaying playout delay statistics
 
 # PARAMETERS
 
@@ -313,6 +313,9 @@ network = VisualizationD
 # PARAMETERS
 # configurate ipv4 addresses manually
 *.configurator.config = xmldoc("configurationD.xml")
+*.configurator.addDefaultRoutes = false
+*.configurator.addStaticRoutes = false
+*.router*.hasRIP = true
 
 # accessPoint1
 *.accessPoint1.wlan[*].radio.transmitter.power = 1mW
@@ -324,11 +327,11 @@ network = VisualizationD
 *.router1.mobility.initialLongitude = -71.06486deg
 
 # pedestrian1 mobility. Changed because we placed a new access point
-*.pedestrian1.mobility.initialX = 630m
-*.pedestrian1.mobility.initialY = 90m
-*.pedestrian1.mobility.constraintAreaMinX = 625m
-*.pedestrian1.mobility.constraintAreaMinY = 85m
-*.pedestrian1.mobility.constraintAreaMaxX = 635m
+*.pedestrian1.mobility.initialX = 615m
+*.pedestrian1.mobility.initialY = 115m
+*.pedestrian1.mobility.constraintAreaMinX = 615m
+*.pedestrian1.mobility.constraintAreaMinY = 110m
+*.pedestrian1.mobility.constraintAreaMaxX = 620m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
 # router0 dhcp
@@ -352,19 +355,25 @@ network = VisualizationD
 *.router1.dhcp.leaseTime = 3600s
 
 # pedestrians dhcp
-*.pedestrian*.numUdpApps = 2
-*.pedestrian*.udpApp[1].typename = "DHCPClient"
+*.pedestrian0.numUdpApps = 1
+*.pedestrian1.numUdpApps = 1
+*.pedestrianVideo.numUdpApps = 2
+*.pedestrian0.udpApp[0].typename = "DHCPClient"
+*.pedestrian1.udpApp[0].typename = "DHCPClient"
+*.pedestrianVideo.udpApp[1].typename = "DHCPClient"
+
+# modify VoIP start time because of the dhcp	# If check_and_cast error solved, change pedestrians dhcp to this
+#*.pedestrian*.numUdpApps = 2
+#*.pedestrian*.udpApp[1].typename = DHCPClient
+#*.pedestrian0.udpApp[0].startTime = 10s
+#*.pedestrian0.udpApp[0].stopTime = 40s
 
 # accesspoint & pedestrians wifi
 *.accessPoint0.wlan[0].mgmt.ssid = "inetwifi0"
 *.accessPoint1.wlan[0].mgmt.ssid = "inetwifi1"
-*.pedestrian0.wlan[0].agent.default_ssid = "inetwifi0"
-*.pedestrianVideo.wlan[0].agent.default_ssid = "inetwifi0"
-*.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
-
-# modify VoIP start time because of the dhcp
-*.pedestrian0.udpApp[0].startTime = 10s
-*.pedestrian0.udpApp[0].stopTime = 40s
+*.pedestrian0.wlan[0].agent.default_ssid = ""
+*.pedestrianVideo.wlan[0].agent.default_ssid = ""
+*.pedestrian1.wlan[0].agent.default_ssid = ""
 
 # VISUALIZER
 # turn off routing table
@@ -378,20 +387,18 @@ network = VisualizationD
 # turn off channel access state
 *.visualizer.*.infoVisualizer.modules = ""
 
-# turn on ieee802.11 visualizer?
+# turn on ieee802.11 visualizer: hogy lassuk, hogy ki melyik ap-hoz kapcsolodott
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 # show pedestrians' wlan ip addresses
-*.visualizer.*.interfaceTableVisualizer.nodeFilter = "*.pedestrian*"
+*.visualizer.*.interfaceTableVisualizer.nodeFilter = "**"
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
 
-# Show the difference between dataLink and route?
-#*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
 # turn off data links
-#*.visualizer.*.dataLinkVisualizer.packetNameFilter = ""
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = ""
 
 # turn on network routes
-*.visualizer.*.networkRouteVisualizer.packetNameFilter = "*VoIP*"
+*.visualizer.*.networkRouteVisualizer.packetNameFilter = "*Video*"
 *.visualizer.*.networkRouteVisualizer.lineColor = "#FF0000"
 
 
@@ -431,17 +438,6 @@ description = Displaying obstacle loss
 [Config Visualization18]	# Showing packet drops
 extends = Visualization17
 description = Showing packet drops
-
-# PARAMETERS
-
-# VISUALIZER
-# visualizer parameters
-*.visualizer.*.packetDropVisualizer.packetNameFilter = "**"
-
-
-[Config Visualization19]	# Displaying transport connections
-extends = Visualization18
-description = Displaying transport connections
 network = VisualizationF
 
 # PARAMETERS
@@ -460,19 +456,20 @@ network = VisualizationF
 *.car[*].mobility.coordinateSystemModule = "coordinateSystem"
 *.car[*].mobility.updateInterval = 100ms
 *.car[0].mobility.waypointFile = "waypoint1.txt"
-*.car[1].mobility.waypointFile = "waypoint2.txt"
+#*.car[1].mobility.waypointFile = "waypoint2.txt"
 *.car[*].mobility.waypointProximity = 4m
 *.car[*].mobility.speed = 12mps
 
 # car video stream settings
 *.car[*].numUdpApps = 2
-*.car[*].udpApp[0].typename = "UDPVideoStreamCli"
-*.car[*].udpApp[0].localPort = 4000
-*.car[*].udpApp[0].serverAddress = "videoStreamServer"
-*.car[*].udpApp[0].serverPort = 4000
-*.car[*].udpApp[0].startTime = 15s
-*.car[*].udpApp[1].typename = "DHCPClient"
-*.car[*].wlan[*].agent.default_ssid = "inetwifi2"
+*.car[*].udpApp[0].typename = "DHCPClient"
+*.car[*].udpApp[1].typename = "UDPVideoStreamCli"
+*.car[*].udpApp[1].localPort = 4000
+*.car[*].udpApp[1].serverAddress = "videoStreamServer"
+*.car[*].udpApp[1].serverPort = 4000
+*.car[*].udpApp[1].startTime = 10s
+
+*.car[*].wlan[*].agent.default_ssid = ""
 
 # accessPoint2 mobility & wlan
 *.accessPoint2.mobility.initialLatitude = 42.35606deg
@@ -525,6 +522,20 @@ network = VisualizationF
 *.tcpHost[0].mobility.initialLatitude = 42.35552deg
 *.tcpHost[0].mobility.initialLongitude = -71.06399deg
 
+# VISUALIZER
+# turn off propagating signals, because it makes the simulation slow
+*.visualizer.*.mediumVisualizer.displaySignals = false
+*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
+
+# visualizer parameters
+*.visualizer.*.packetDropVisualizer.packetNameFilter = "**"
+
+
+[Config Visualization19]	# Displaying transport connections
+extends = Visualization18
+description = Displaying transport connections
+
+# PARAMETERS
 **.tcpHost[*].numTcpApps = 2
 **.tcpHost[*].tcpApp[0].typename = "TCPSinkApp"
 
@@ -533,16 +544,6 @@ network = VisualizationF
 **.tcpHost[1].tcpApp[1].connectAddress = "tcpHost[0]"
 
 # VISUALIZER
-# turn off propagating signals, because it makes the simulation slow
-*.visualizer.*.mediumVisualizer.displaySignals = false
-*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
-
-# turn off showing channel access state
-*.visualizer.*.infoVisualizer.modules = ""
-
-# shows wifi association
-*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
-
 # transport connection visualizer
 *.visualizer.*.transportConnectionVisualizer.nodeFilter = "**"
 
@@ -551,9 +552,25 @@ network = VisualizationF
 extends = Visualization19
 description = Showing link breaks
 
-# PARAMETERS
-# debugging: make the simulation faster. If all devices works, turn it on
+# PARAMETERSvideoStreamServer
+# debugging: make the simulation faster. If all devices works, maybe turn it on
 **.tcpHost[*].numTcpApps = 0
+
+# car udp after handover
+*.car[*].numUdpApps = 2
+*.car[*].udpApp[1].typename = "UDPVideoStreamCli"
+*.car[*].udpApp[1].localPort = 2000
+*.car[*].udpApp[1].serverAddress = "videoStreamServer"
+*.car[*].udpApp[1].serverPort = 2000
+*.car[*].udpApp[1].startTime = 20s
+
+# videoStreamServer application
+*.videoStreamServer.numUdpApps = 2
+*.videoStreamServer.udpApp[1].typename = "UDPVideoStreamSvr"
+*.videoStreamServer.udpApp[1].localPort = 2000
+*.videoStreamServer.udpApp[1].sendInterval = exponential(5ms)
+*.videoStreamServer.udpApp[1].packetLen = 1000B
+*.videoStreamServer.udpApp[1].videoSize = 30000000B
 
 # VISUALIZER
 # link break visualizer parameters
