--- a/examples/rip/simpletest/omnetpp.ini
+++ b/examples/rip/simpletest/omnetpp.ini
@@ -9,6 +9,7 @@ record-eventlog = false
 # debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
 sim-time-limit = 600s
+**.netmaskRoutes = ""
 
 **.numUdpApps = 2
 **.udpApp[0].typename = "UDPBasicApp"
