--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -138,27 +138,24 @@ description = Displaying transmissions & receptions
 
 # PARAMETERS
 # voip application
-#*.pedestrian0.numUdpApps = 1
-#*.pedestrian1.numUdpApps = 1
+*.pedestrian0.numUdpApps = 1
+*.pedestrian1.numUdpApps = 1
 
-# voip sender		# If check_and_cast error solved, uncomment this
-#*.pedestrian0.udpApp[0].typename = "SimpleVoIPSender"
-#*.pedestrian0.udpApp[0].destAddress = "pedestrian1"
-#*.pedestrian0.udpApp[0].localPort = 5000
-#*.pedestrian0.udpApp[0].destPort = 5000
+# voip sender
+*.pedestrian0.udpApp[0].typename = "SimpleVoIPSender"
+*.pedestrian0.udpApp[0].destAddress = "pedestrian1"
+*.pedestrian0.udpApp[0].localPort = 5000
+*.pedestrian0.udpApp[0].destPort = 5000
 # can be changed or can be omitted
-#*.pedestrian0.udpApp[0].startTime = 1s
-#*.pedestrian0.udpApp[0].stopTime = 31s
+*.pedestrian0.udpApp[0].startTime = 1s
+*.pedestrian0.udpApp[0].stopTime = 31s
 
-# voip receiver		# If check_and_cast error solved, uncomment this
-#*.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
-#*.pedestrian1.udpApp[0].localPort = 5000
-#*.pedestrian1.udpApp[0].adaptivePlayoutDelay = true
+# voip receiver
+*.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
+*.pedestrian1.udpApp[0].localPort = 5000
+*.pedestrian1.udpApp[0].adaptivePlayoutDelay = true
 
 # VISUALIZER
-# turn off ieee802.11 visualizer?
-#*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
-
 # display transmissions & receptions
 *.visualizer.*.mediumVisualizer.displayTransmissions = true
 *.visualizer.*.mediumVisualizer.displayReceptions = true
@@ -267,7 +264,7 @@ network = VisualizationC
 *.pedestrianVideo.udpApp[0].serverAddress = "videoStreamServer"
 *.pedestrianVideo.udpApp[0].serverPort = 4000
 # can be changed or can be omitted
-*.pedestrianVideo.udpApp[0].startTime = 15s
+*.pedestrianVideo.udpApp[0].startTime = 25s
 
 # VISUALIZER
 # turn off communication and interface ranges
@@ -297,7 +294,7 @@ description = Displaying 802.11 channel access state
 *.visualizer.*.statisticVisualizer.signalName = ""
 *.visualizer.*.statisticVisualizer.statisticName = ""
 
-# turn on ieee802.11 visualizer?
+# turn on ieee802.11 visualizer
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 # info visualizer parameters: shows channel access state
@@ -313,9 +310,9 @@ network = VisualizationD
 # PARAMETERS
 # configurate ipv4 addresses manually
 *.configurator.config = xmldoc("configurationD.xml")
-*.configurator.addDefaultRoutes = false
-*.configurator.addStaticRoutes = false
+# configure rip
 *.router*.hasRIP = true
+*.configurator.optimizeRoutes = false
 
 # accessPoint1
 *.accessPoint1.wlan[*].radio.transmitter.power = 1mW
@@ -339,7 +336,7 @@ network = VisualizationD
 *.router0.dhcp.interface = "eth0"
 *.router0.dhcp.ipAddressStart = "192.168.0.11"
 *.router0.dhcp.subnetMask = "255.255.255.0"
-*.router0.dhcp.maxNumClients = 10
+*.router0.dhcp.maxNumClients = 20
 *.router0.dhcp.gateway = "192.168.0.1"
 *.router0.dhcp.dns = "192.168.0.1"
 *.router0.dhcp.leaseTime = 3600s
@@ -354,40 +351,28 @@ network = VisualizationD
 *.router1.dhcp.dns = "192.168.1.1"
 *.router1.dhcp.leaseTime = 3600s
 
-# pedestrians dhcp
-*.pedestrian0.numUdpApps = 1
-*.pedestrian1.numUdpApps = 1
-*.pedestrianVideo.numUdpApps = 2
-*.pedestrian0.udpApp[0].typename = "DHCPClient"
-*.pedestrian1.udpApp[0].typename = "DHCPClient"
-*.pedestrianVideo.udpApp[1].typename = "DHCPClient"
-
-# modify VoIP start time because of the dhcp	# If check_and_cast error solved, change pedestrians dhcp to this
-#*.pedestrian*.numUdpApps = 2
-#*.pedestrian*.udpApp[1].typename = DHCPClient
-#*.pedestrian0.udpApp[0].startTime = 10s
-#*.pedestrian0.udpApp[0].stopTime = 40s
+# modify VoIP start time because of the dhcp
+*.pedestrian*.numUdpApps = 2
+*.pedestrian*.udpApp[1].typename = DHCPClient
+*.pedestrian0.udpApp[0].startTime = 10s
+*.pedestrian0.udpApp[0].stopTime = 40s
 
 # accesspoint & pedestrians wifi
 *.accessPoint0.wlan[0].mgmt.ssid = "inetwifi0"
 *.accessPoint1.wlan[0].mgmt.ssid = "inetwifi1"
 *.pedestrian0.wlan[0].agent.default_ssid = ""
 *.pedestrianVideo.wlan[0].agent.default_ssid = ""
-*.pedestrian1.wlan[0].agent.default_ssid = ""
+*.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
 
 # VISUALIZER
 # turn off routing table
 *.visualizer.*.routingTableVisualizer.subscriptionModule = ""
 *.visualizer.*.routingTableVisualizer.destinationFilter = ""
 
-# turn off ranges
-*.visualizer.*.mediumVisualizer.displayCommunicationRanges = false
-*.visualizer.*.mediumVisualizer.displayInterferenceRanges = false
-
 # turn off channel access state
 *.visualizer.*.infoVisualizer.modules = ""
 
-# turn on ieee802.11 visualizer: hogy lassuk, hogy ki melyik ap-hoz kapcsolodott
+# turn on ieee802.11 visualizer: hogy lassam, hogy ki melyik ap-hoz kapcsolodott
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 # show pedestrians' wlan ip addresses
@@ -399,7 +384,6 @@ network = VisualizationD
 
 # turn on network routes
 *.visualizer.*.networkRouteVisualizer.packetNameFilter = "*Video*"
-*.visualizer.*.networkRouteVisualizer.lineColor = "#FF0000"
 
 
 [Config Visualization16]	# Displaying physical environment
@@ -461,21 +445,41 @@ network = VisualizationF
 *.car[*].mobility.speed = 12mps
 
 # car video stream settings
-*.car[*].numUdpApps = 2
+*.car[*].numUdpApps = 3
 *.car[*].udpApp[0].typename = "DHCPClient"
 *.car[*].udpApp[1].typename = "UDPVideoStreamCli"
 *.car[*].udpApp[1].localPort = 4000
 *.car[*].udpApp[1].serverAddress = "videoStreamServer"
 *.car[*].udpApp[1].serverPort = 4000
-*.car[*].udpApp[1].startTime = 10s
+*.car[*].udpApp[1].startTime = 12s
+
+*.car[*].udpApp[2].typename = "UDPVideoStreamCli"
+*.car[*].udpApp[2].localPort = 3000
+*.car[*].udpApp[2].serverAddress = "videoStreamServer"
+*.car[*].udpApp[2].serverPort = 3000
+*.car[*].udpApp[2].startTime = 22s
 
 *.car[*].wlan[*].agent.default_ssid = ""
+
+# videoStreamServer application
+*.videoStreamServer.numUdpApps = 2
+*.videoStreamServer.udpApp[1].typename = "UDPVideoStreamSvr"
+*.videoStreamServer.udpApp[1].localPort = 3000
+*.videoStreamServer.udpApp[1].sendInterval = exponential(5ms)
+*.videoStreamServer.udpApp[1].packetLen = 1000B
+*.videoStreamServer.udpApp[1].videoSize = 50000B
 
 # accessPoint2 mobility & wlan
 *.accessPoint2.mobility.initialLatitude = 42.35606deg
 *.accessPoint2.mobility.initialLongitude = -71.06935deg
 *.accessPoint2.wlan[*].radio.transmitter.power = 1mW
 *.accessPoint2.wlan[0].mgmt.ssid = "inetwifi2"
+
+# accessPoint3 mobility & wlan
+*.accessPoint3.mobility.initialLatitude = 42.357007deg
+*.accessPoint3.mobility.initialLongitude = -71.0657737deg
+*.accessPoint3.wlan[*].radio.transmitter.power = 1mW
+*.accessPoint3.wlan[0].mgmt.ssid = "inetwifi3"
 
 # router2 mobility
 *.router2.mobility.initialLatitude = 42.3554667deg
@@ -505,12 +509,6 @@ network = VisualizationF
 *.router3.dhcp.dns = "192.168.3.1"
 *.router3.dhcp.leaseTime = 3600s
 
-# accessPoint3 mobility & wlan
-*.accessPoint3.mobility.initialLatitude = 42.357007deg
-*.accessPoint3.mobility.initialLongitude = -71.0657737deg
-*.accessPoint3.wlan[*].radio.transmitter.power = 1mW
-*.accessPoint3.wlan[0].mgmt.ssid = "inetwifi3"
-
 # tcp hosts mobility and tcp application settings
 *.tcpHost[*].mobilityType = "StationaryMobility"
 *.tcpHost[*].mobility.coordinateSystemModule = "coordinateSystem"
@@ -536,12 +534,10 @@ extends = Visualization18
 description = Displaying transport connections
 
 # PARAMETERS
-**.tcpHost[*].numTcpApps = 2
-**.tcpHost[*].tcpApp[0].typename = "TCPSinkApp"
-
-**.tcpHost[*].tcpApp[1].typename = "TCPSessionApp"
-**.tcpHost[0].tcpApp[1].connectAddress = "tcpHost[1]"
-**.tcpHost[1].tcpApp[1].connectAddress = "tcpHost[0]"
+**.tcpHost[*].numTcpApps = 1
+**.tcpHost[0].tcpApp[0].typename = "TCPSessionApp"
+**.tcpHost[0].tcpApp[0].connectAddress = "tcpHost[1]"
+**.tcpHost[1].tcpApp[0].typename = "TCPSinkApp"
 
 # VISUALIZER
 # transport connection visualizer
@@ -552,25 +548,10 @@ description = Displaying transport connections
 extends = Visualization19
 description = Showing link breaks
 
-# PARAMETERSvideoStreamServer
-# debugging: make the simulation faster. If all devices works, maybe turn it on
-**.tcpHost[*].numTcpApps = 0
-
-# car udp after handover
-*.car[*].numUdpApps = 2
-*.car[*].udpApp[1].typename = "UDPVideoStreamCli"
-*.car[*].udpApp[1].localPort = 2000
-*.car[*].udpApp[1].serverAddress = "videoStreamServer"
-*.car[*].udpApp[1].serverPort = 2000
-*.car[*].udpApp[1].startTime = 20s
-
-# videoStreamServer application
-*.videoStreamServer.numUdpApps = 2
-*.videoStreamServer.udpApp[1].typename = "UDPVideoStreamSvr"
-*.videoStreamServer.udpApp[1].localPort = 2000
-*.videoStreamServer.udpApp[1].sendInterval = exponential(5ms)
-*.videoStreamServer.udpApp[1].packetLen = 1000B
-*.videoStreamServer.udpApp[1].videoSize = 30000000B
+# PARAMETERS
+# videoStreamServer
+# makes the simulation faster. If all devices works, maybe turn it on
+**.tcpHost[0].tcpApp[0].tClose = 0.07s
 
 # VISUALIZER
 # link break visualizer parameters
@@ -581,11 +562,28 @@ description = Showing link breaks
 extends = Visualization20
 description = Visualizing handovers
 
+# PARAMETERS
+
+# VISUALIZER
+
 
 [Config Visualization22]
 extends = Visualization21
 description = Displaying changing routes
 
-# turn on network routes
+# PARAMETERS
+
+# VISUALIZER
+# turn on Video network routes
 *.visualizer.*.networkRouteVisualizer.packetNameFilter = "*Video*"
 *.visualizer.*.networkRouteVisualizer.lineColor = "#FF0000"
+
+# show VoIP data links
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
+
+# show transport connection
+*.visualizer.*.transportConnectionVisualizer.nodeFilter = "**"
+
+# display transmissions & receptions
+*.visualizer.*.mediumVisualizer.displayTransmissions = true
+*.visualizer.*.mediumVisualizer.displayReceptions = true
